# PSMV-RDF

./: .gitattributes  .gitignore  README.md  Sequence_Diagram.md  environment.yml  pyproject.toml  semantic_model_overview.md
.github/: CONTRIBUTING.md
data/mapping/: mapped_columns.csv  mapping.csv  mapping_colums.yaml  mapping_datasets.yaml  mapping_values.yaml
data/namespaces/: namespaces.yaml
data/processed/: AllProducts_Renamed.csv  all_products.csv  test.csv
data/raw/: AllProducts270126.csv  AllProducts280126.csv  ApplicationArea270126.csv  ApplicationComment270126.csv  IndicationCulture270126.csv  IndicationCultureForm270126.csv  IndicationMeasure270126.csv  IndicationObligation270126.csv  IndicationPest270126.csv  IndicationTimeMeasure270126.csv  ProductCodeR270126.csv  ProductCodeS270126.csv  ProductDangerSymbol270126.csv  ProductFormulationCode270126.csv  ProductIndication270126.csv  ProductIngredient270126.csv  ProductPermissionHolder270126.csv  ProductProductCategory270126.csv  ProductSignalWords270126.csv  PsmvPermissionholder270126.csv  code280126.csv
docs/workshops_semantic_model/: ontology_class_docs_full.csv  semantic_model_overview.md  xsd-mermaid.md
rdf/data/: example.ttl  products.ttl  products_test.ttl
rdf/ontology/: core.ttl  ghs.ttl  prefixes.ttl
rdf/shapes/: shapes.ttl
service/: create_ontology.bash  pipeline.bash  upload.bash
services/: pipeline.py
sparql/examples/: README.md
sparql/rules/: inverse.rq
src/python/: preprocess_data.py  (+4 more)
tests/: test_csv.py
workshops_semantic_model/: extract_definitions.ipynb  xsd-mermaid.md
(+9 files in other folders)
