[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psmw-rdf"
version = "0.1.0"
description = "This is a pipeline for converting the Swiss plant protection product registry into RDF-linked data."
authors = [
  {name = "Martin Hertach", email = "martin.hertach@blv.admin.ch"},
  {name = "Sara Schärrer", email = "sara.schaerrer@blv.admin.ch"},
  {name = "Damian Oswald", email = "damian.owsald@blw.admin.ch"},
  {name = "Guy Schnidrig", email = "guy.schnirig@blv.admin.ch"}
]
dependencies = [
  "rdflib>=6.3.2",
  "pandas>=2.0.3",
  "requests>=2.31.0",
  "pyyaml>=6.0",
  "pyshacl>=0.21.0"
]
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.12
ignore_missing_imports = true
